<resources>
    <string name="app_name">MedicalApplication</string>
    <string name="title">CheckUp</string>
    <string name="user_name">user1</string>
    <string name="user_pword">password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_text_view">No account yet? Create one!</string>
    <string name="editPasswordText">Password</string>
    <string name="editConfirmPasswordText">Confirm Password</string>
    <string name="editUsernameText">Username</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="return_to_login_text_view">Return To Login</string>
    <string name="successful_log_in_toast">Signed In!</string>
    <string name="failed_log_in_toast">Incorrect Password or Username :(</string>
    <string name="sign_up_toast">Signed Up!</string>
    <string name="create_user">Create New Account</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="show_record">Show Existing Record</string>
    <string name="create_record">Create New Record</string>
    <string name="update_record">Update Existing Record</string>
    <string name="delete_record">Delete Existing Record</string>
    <string name="birth_date">Birth Date:</string>
    <string name="last_visit">Last Visit:</string>
    <string name="allergies">Allergies: (separate with commas)</string>
    <string name="medications">Medications: (separate with commas)</string>
    <string name="surgeries">Surgeries: (separate with commas)</string>
    <string name="send">Send</string>
    <string name="failed_send_toast">Failed To Send</string>
    <string name="successful_send_toast">Message Sent</string>
    <string name="record_not_found">No record found. Try creating a new one.</string>
    <string name="record_updated">Record Was Updated</string>
    <string name="record_created">New Record Created</string>
    <string name="record_deleted">Record Deleted</string>
    <string name="message_not_found">No New Message(s) at this time</string>
    <string name="medications_title">Medications:</string>
    <string name="allergies_title">Known Allergies:</string>
    <string name="surgeries_title">Completed Surgeries:</string>
    <string name="record_title">Medical Record for,</string>
    <string name="date_of_birth_title">\tDate of Birth:</string>
    <string name="last_visit_title">\tLast Visit:</string>
    <string name="intro_text">Behold, a data dump from the Fitness API! Check the menu for more actions!</string>
    <string name="action_update_session">Update step count data</string>
    <string name="action_delete_session">Delete step count data</string>
    <string name="action_settings">Settings</string>
    <string name="card_holder">Card Holder:</string>
    <string name="description">Payment Description:</string>
    <string name="card_number">CardNumber:</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="amount">Payment Amount:</string>
    <string name="cvv">CVV:</string>
    <string name="payment_created">Payment Submitted!</string>
    <string name="receipt_title">Payment Receipt</string>
    <string name="amount_paid">Amount Of:</string>
    <string name="reason_for_payment">For:</string>
    <string name="successful_receipt">Was Received Successfully!</string>
    <string name="return_home">Return To Home Page</string>
    <string name="another_payment">Make Another Payment</string>

</resources>
