<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

    <ImageView
            android:src="@drawable/app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

    <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingBottom="20dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editUsernameText"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/editUsernameText"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editPasswordText"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/editPasswordText"/>

    </android.support.design.widget.TextInputLayout>

        <Button
                android:textColor="#fff"
                android:background="@color/colorPrimary"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_button"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/sign_in_button"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:id="@+id/sign_up_text_view"
            android:text="@string/sign_up_text_view"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textSize="18sp"/>


</LinearLayout>
