<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jpf5321.cs.psu.edu.medicalapplication.ReceiptActivity">

    <TextView
            android:id="@+id/receipt_text_view"
            android:text="@string/receipt_title"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="viewStart"/>
    <TextView
            android:id="@+id/amount_paid_text_view"
            android:text="@string/amount_paid"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/receipt_text_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAlignment="viewStart"/>
    <TextView
            android:id="@+id/reason_text_view"
            android:text="@string/reason_for_payment"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/amount_paid_text_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart"/>
    <TextView
            android:id="@+id/receipt_success"
            android:text="@string/successful_receipt"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/reason_text_view"
            android:layout_marginStart="8dp"/>
    <Button
            android:id="@+id/return_to_home"
            android:text="@string/return_home"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="18sp" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/make_another_payment"
            android:layout_marginStart="8dp"/>
    <Button
            android:id="@+id/make_another_payment"
            android:text="@string/another_payment"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="18sp" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/receipt_success"
            android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>