<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jpf5321.cs.psu.edu.medicalapplication.UpdaterecordActivity"
        android:orientation="horizontal">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_visit"
                android:paddingBottom="30dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_date"
                android:paddingBottom="30dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medications"
                android:paddingBottom="30dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergies"
                android:paddingBottom="30dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surgeries"
                android:paddingBottom="30dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/update_record_lastvisit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <EditText
                android:id="@+id/update_record_birthdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <EditText
                android:id="@+id/update_record_medications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <EditText
                android:id="@+id/update_record_allergies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <EditText
                android:id="@+id/update_record_surgeries"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <Button
                android:id="@+id/update_record_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_gravity="bottom"
                android:gravity="bottom"/>
    </LinearLayout>

</LinearLayout>
