<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jpf5321.cs.psu.edu.medicalapplication.RecordActivity">

    <TextView
            android:id="@+id/record_name_text_view"
            android:text="@string/record_title"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp" android:textStyle="bold" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="viewStart"/>
    <TextView
            android:id="@+id/record_birth_text_view"
            android:text="@string/date_of_birth_title"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/record_name_text_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAlignment="viewStart"/>
    <TextView
            android:id="@+id/record_last_visit_text_view"
            android:text="@string/last_visit_title"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/record_birth_text_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textAlignment="viewStart"/>
    <TextView
            android:id="@+id/record_allergies_text_view"
            android:text="@string/allergies_title"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/record_medications_contents_text_view"
            android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/record_allergies_contents_text_view"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/record_allergies_text_view"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center" android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/record_medications_text_view"
            android:text="@string/medications_title"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/record_last_visit_text_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAlignment="center"/>
    <TextView
            android:id="@+id/record_medications_contents_text_view"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/record_medications_text_view"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center" android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/record_surgery_text_view"
            android:text="@string/surgeries_title"
            android:gravity="center"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:textSize="24sp" android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/record_allergies_contents_text_view"
            android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:id="@+id/record_surgery_contents_text_view"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/record_surgery_text_view"
            android:textAlignment="center" android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>
