<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="jpf5321.cs.psu.edu.medicalapplication.PaymentActivity"
        android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="79dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textInputLayout">
        <EditText
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/payment_description"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/description"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:id="@+id/textInputLayout2">
        <EditText
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/payment_amount"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/amount"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:id="@+id/textInputLayout3">
        <EditText
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/card_holder_name"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/card_holder"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="82dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" android:layout_marginStart="16dp"
            android:id="@+id/textInputLayout4">
        <EditText
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/card_number"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/card_number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textInputLayout5">
        <EditText
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/card_expiration_date"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/expiration_date"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textInputLayout6">
        <EditText
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/card_cvv"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:hint="@string/cvv"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/submit_payment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit Payment"
            android:layout_gravity="bottom"
            android:gravity="bottom" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>